parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT

Grammar

Rule 0     S' -> start
Rule 1     start -> declarar_estructuras declarar_main
Rule 2     start -> declarar_funciones declarar_main
Rule 3     start -> declarar_estructuras declarar_funciones declarar_main
Rule 4     start -> declarar_main
Rule 5     declarar_estructuras -> STRUFUCT ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC LLAVEC
Rule 6     declarar_estructuras -> declarar_estructuras_error
Rule 7     declarar_estructuras_error -> ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC LLAVEC
Rule 8     declarar_estructuras_error -> ID ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC LLAVEC
Rule 9     declarar_estructuras_error -> STRUFUCT ID LLAVEA tipo_dato PYC tipo_dato ID PYC LLAVEC
Rule 10    declarar_estructuras_error -> STRUFUCT ID LLAVEA tipo_dato ID PYC tipo_dato PYC LLAVEC
Rule 11    declarar_estructuras_error -> STRUFUCT ID LLAVEA tipo_dato PYC tipo_dato PYC LLAVEC
Rule 12    declarar_estructuras_error -> STRUFUCT ID LLAVEA ID PYC ID PYC LLAVEC
Rule 13    declarar_estructuras_error -> STRUFUCT ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC tipo_dato ID PYC LLAVEC
Rule 14    declarar_funciones -> FUNCTION tipo_dato ID PA tipo_dato ID PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
Rule 15    declarar_funciones -> FUNCTION tipo_dato ID PA PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
Rule 16    declarar_funciones -> FUNCTION tipo_dato ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
Rule 17    declarar_funciones -> FUNCTION tipo_dato ID PA tipo_dato ID COMA tipo_dato ID PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
Rule 18    declarar_main -> IFINT MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
Rule 19    declarar_main -> declarar_main_error
Rule 20    declarar_main_error -> MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
Rule 21    declarar_main_error -> IFINT MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
Rule 22    declarar_main_error -> MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
Rule 23    declarar_main_error -> IFINT PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
Rule 24    declarar_main_error -> IFINT ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
Rule 25    tipo_dato -> IFINT
Rule 26    tipo_dato -> STRIFING
Rule 27    tipo_dato -> AFARRAFAY
Rule 28    tipo_dato -> STRUFUCT
Rule 29    tipo_dato -> VOFOIFID
Rule 30    tipo_dato -> CHAFAR
Rule 31    tipo_dato -> BOFOOFOL
Rule 32    tipo_dato -> FLOFOAFAT
Rule 33    bloque_codigo -> declarar_if bloque_codigo
Rule 34    bloque_codigo -> declaracion bloque_codigo
Rule 35    bloque_codigo -> asignar_estructuras bloque_codigo
Rule 36    bloque_codigo -> asignar_array bloque_codigo
Rule 37    bloque_codigo -> funcion bloque_codigo
Rule 38    bloque_codigo -> print bloque_codigo
Rule 39    bloque_codigo -> input bloque_codigo
Rule 40    bloque_codigo -> declaracion_while bloque_codigo
Rule 41    bloque_codigo -> VACIO
Rule 42    declarar_if -> IFIF PA condicion PC LLAVEA bloque_codigo LLAVEC
Rule 43    declarar_if -> IFIF PA condicion PC LLAVEA bloque_codigo LLAVEC EFELSEFE LLAVEA bloque_codigo LLAVEC
Rule 44    declarar_if -> declarar_if_error_llave
Rule 45    declarar_if_error_llave -> IFIF PA condicion PC LLAVEA bloque_codigo LLAVEC EFELSEFE LLAVEA bloque_codigo
Rule 46    declarar_if_error_llave -> IFIF PA condicion PC LLAVEA bloque_codigo LLAVEC EFELSEFE bloque_codigo LLAVEC
Rule 47    declaracion -> tipo_dato ID ASG ID operacion_matematica ID PYC
Rule 48    declaracion -> tipo_dato ID ASG dato PYC
Rule 49    declaracion -> AFARRAFAY ID dimensiones PYC
Rule 50    declaracion -> declaracion_error
Rule 51    declaracion_error -> ID PYC
Rule 52    declaracion_error -> ID ASG ID operacion_matematica ID PYC
Rule 53    declaracion_error -> ID ASG valores PYC
Rule 54    declaracion_error -> ID ID PYC
Rule 55    declaracion_error -> ID ID ASG ID operacion_matematica ID PYC
Rule 56    declaracion_error -> ID ID ASG valores PYC
Rule 57    declaracion_error -> ID ID dimensiones PYC
Rule 58    declaracion_error -> ID dimensiones PYC
Rule 59    dimensiones -> dimension dimensiones
Rule 60    dimensiones -> VACIO
Rule 61    dimension -> CA INT CC
Rule 62    asignar_array -> ID dimensiones ASG dato PYC
Rule 63    asignar_estructuras -> ID PUNTO ID ASG dato PYC
Rule 64    funcion -> ID PA valores PC PYC
Rule 65    funcion -> ID PA PC PYC
Rule 66    funcion -> ID PA valores COMA valores PC PYC
Rule 67    print -> PRIFINT PA ID PC PYC
Rule 68    input -> IFINPUFUT PA ID PC PYC
Rule 69    declaracion_while -> WHIFILEFE PA condicion PC LLAVEA bloque_codigo LLAVEC
Rule 70    declaracion_while -> declaracion_while_error
Rule 71    declaracion_while_error -> PA condicion PC LLAVEA bloque_codigo LLAVEC
Rule 72    declaracion_while_error -> ID PA condicion PC LLAVEA bloque_codigo LLAVEC
Rule 73    declaracion_while_error -> WHIFILEFE PA condicion PC bloque_codigo LLAVEC
Rule 74    declaracion_while_error -> WHIFILEFE PA condicion PC LLAVEA bloque_codigo
Rule 75    condicion -> ID operadores ID
Rule 76    operacion_matematica -> SUM
Rule 77    operacion_matematica -> RES
Rule 78    operacion_matematica -> MUL
Rule 79    operacion_matematica -> DIV
Rule 80    operacion_matematica -> RED
Rule 81    operacion_matematica -> POT
Rule 82    valores -> INT
Rule 83    valores -> CHAR
Rule 84    valores -> TRUFUEFE
Rule 85    valores -> FAFALSEFE
Rule 86    valores -> PCC
Rule 87    valores -> ID
Rule 88    dato -> INT
Rule 89    dato -> CHAR
Rule 90    dato -> TRUFUEFE
Rule 91    dato -> FAFALSEFE
Rule 92    dato -> PCC
Rule 93    dato -> REAL
Rule 94    operadores -> MEN
Rule 95    operadores -> MAY
Rule 96    operadores -> MENIG
Rule 97    operadores -> MAYIG
Rule 98    operadores -> CMP
Rule 99    operadores -> DIF
Rule 100   operadores_logicos -> AND
Rule 101   operadores_logicos -> OR
Rule 102   vacio -> VACIO

Terminals, with rules where they appear

AFARRAFAY            : 27 49
AND                  : 100
ASG                  : 47 48 52 53 55 56 62 63
BOFOOFOL             : 31
CA                   : 61
CC                   : 61
CHAFAR               : 30
CHAR                 : 83 89
CMP                  : 98
COMA                 : 17 66
DIF                  : 99
DIV                  : 79
EFELSEFE             : 43 45 46
FAFALSEFE            : 85 91
FLOFOAFAT            : 32
FUNCTION             : 14 15 16 17
ID                   : 5 5 5 7 7 7 8 8 8 8 9 9 10 10 11 12 12 12 13 13 13 13 14 14 14 15 15 16 17 17 17 17 24 47 47 47 48 49 51 52 52 52 53 54 54 55 55 55 55 56 56 57 57 58 62 63 63 64 65 66 67 68 72 75 75 87
IFIF                 : 42 43 45 46
IFINPUFUT            : 68
IFINT                : 18 21 23 24 25
INT                  : 61 82 88
LLAVEA               : 5 7 8 9 10 11 12 13 14 15 16 17 18 20 21 22 23 24 42 43 43 45 45 46 69 71 72 74
LLAVEC               : 5 7 8 9 10 11 12 13 14 15 16 17 18 20 21 22 23 24 42 43 43 45 46 46 69 71 72 73
MAFAIFIN             : 18 20 21 22
MAY                  : 95
MAYIG                : 97
MEN                  : 94
MENIG                : 96
MUL                  : 78
NOT                  : 
OR                   : 101
PA                   : 14 15 16 17 18 20 21 22 23 24 42 43 45 46 64 65 66 67 68 69 71 72 73 74
PC                   : 14 15 16 17 18 20 21 22 23 24 42 43 45 46 64 65 66 67 68 69 71 72 73 74
PCC                  : 86 92
POT                  : 81
PRIFINT              : 67
PUNTO                : 63
PYC                  : 5 5 7 7 8 8 9 9 10 10 11 11 12 12 13 13 13 14 15 16 17 18 20 23 24 47 48 49 51 52 53 54 55 56 57 58 62 63 64 65 66 67 68
REAL                 : 93
RED                  : 80
REFETUFURN           : 14 15 16 17 18 20 23 24
RES                  : 77
STRIFING             : 26
STRUFUCT             : 5 9 10 11 12 13 28
SUM                  : 76
TRUFUEFE             : 84 90
VACIO                : 41 60 102
VOFOIFID             : 29
WHIFILEFE            : 69 73 74
error                : 

Nonterminals, with rules where they appear

asignar_array        : 36
asignar_estructuras  : 35
bloque_codigo        : 14 15 16 17 18 20 21 22 23 24 33 34 35 36 37 38 39 40 42 43 43 45 45 46 46 69 71 72 73 74
condicion            : 42 43 45 46 69 71 72 73 74
dato                 : 48 62 63
declaracion          : 34
declaracion_error    : 50
declaracion_while    : 40
declaracion_while_error : 70
declarar_estructuras : 1 3
declarar_estructuras_error : 6
declarar_funciones   : 2 3
declarar_if          : 33
declarar_if_error_llave : 44
declarar_main        : 1 2 3 4
declarar_main_error  : 19
dimension            : 59
dimensiones          : 49 57 58 59 62
funcion              : 37
input                : 39
operacion_matematica : 47 52 55
operadores           : 75
operadores_logicos   : 
print                : 38
start                : 0
tipo_dato            : 5 5 7 7 8 8 9 9 10 10 11 11 13 13 13 14 14 15 16 17 17 17 47 48
vacio                : 
valores              : 53 56 64 66 66

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . declarar_estructuras declarar_main
    (2) start -> . declarar_funciones declarar_main
    (3) start -> . declarar_estructuras declarar_funciones declarar_main
    (4) start -> . declarar_main
    (5) declarar_estructuras -> . STRUFUCT ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC LLAVEC
    (6) declarar_estructuras -> . declarar_estructuras_error
    (14) declarar_funciones -> . FUNCTION tipo_dato ID PA tipo_dato ID PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
    (15) declarar_funciones -> . FUNCTION tipo_dato ID PA PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
    (16) declarar_funciones -> . FUNCTION tipo_dato ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (17) declarar_funciones -> . FUNCTION tipo_dato ID PA tipo_dato ID COMA tipo_dato ID PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
    (18) declarar_main -> . IFINT MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (19) declarar_main -> . declarar_main_error
    (7) declarar_estructuras_error -> . ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC LLAVEC
    (8) declarar_estructuras_error -> . ID ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC LLAVEC
    (9) declarar_estructuras_error -> . STRUFUCT ID LLAVEA tipo_dato PYC tipo_dato ID PYC LLAVEC
    (10) declarar_estructuras_error -> . STRUFUCT ID LLAVEA tipo_dato ID PYC tipo_dato PYC LLAVEC
    (11) declarar_estructuras_error -> . STRUFUCT ID LLAVEA tipo_dato PYC tipo_dato PYC LLAVEC
    (12) declarar_estructuras_error -> . STRUFUCT ID LLAVEA ID PYC ID PYC LLAVEC
    (13) declarar_estructuras_error -> . STRUFUCT ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC tipo_dato ID PYC LLAVEC
    (20) declarar_main_error -> . MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (21) declarar_main_error -> . IFINT MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
    (22) declarar_main_error -> . MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
    (23) declarar_main_error -> . IFINT PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (24) declarar_main_error -> . IFINT ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC

    STRUFUCT        shift and go to state 5
    FUNCTION        shift and go to state 8
    IFINT           shift and go to state 9
    ID              shift and go to state 6
    MAFAIFIN        shift and go to state 10

    start                          shift and go to state 1
    declarar_estructuras           shift and go to state 2
    declarar_main                  shift and go to state 3
    declarar_funciones             shift and go to state 4
    declarar_estructuras_error     shift and go to state 7
    declarar_main_error            shift and go to state 11

state 1

    (0) S' -> start .



state 2

    (1) start -> declarar_estructuras . declarar_main
    (3) start -> declarar_estructuras . declarar_funciones declarar_main
    (18) declarar_main -> . IFINT MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (19) declarar_main -> . declarar_main_error
    (14) declarar_funciones -> . FUNCTION tipo_dato ID PA tipo_dato ID PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
    (15) declarar_funciones -> . FUNCTION tipo_dato ID PA PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
    (16) declarar_funciones -> . FUNCTION tipo_dato ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (17) declarar_funciones -> . FUNCTION tipo_dato ID PA tipo_dato ID COMA tipo_dato ID PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
    (20) declarar_main_error -> . MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (21) declarar_main_error -> . IFINT MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
    (22) declarar_main_error -> . MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
    (23) declarar_main_error -> . IFINT PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (24) declarar_main_error -> . IFINT ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC

    IFINT           shift and go to state 9
    FUNCTION        shift and go to state 8
    MAFAIFIN        shift and go to state 10

    declarar_main                  shift and go to state 12
    declarar_funciones             shift and go to state 13
    declarar_main_error            shift and go to state 11

state 3

    (4) start -> declarar_main .

    $end            reduce using rule 4 (start -> declarar_main .)


state 4

    (2) start -> declarar_funciones . declarar_main
    (18) declarar_main -> . IFINT MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (19) declarar_main -> . declarar_main_error
    (20) declarar_main_error -> . MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (21) declarar_main_error -> . IFINT MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
    (22) declarar_main_error -> . MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
    (23) declarar_main_error -> . IFINT PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (24) declarar_main_error -> . IFINT ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC

    IFINT           shift and go to state 9
    MAFAIFIN        shift and go to state 10

    declarar_main                  shift and go to state 14
    declarar_main_error            shift and go to state 11

state 5

    (5) declarar_estructuras -> STRUFUCT . ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC LLAVEC
    (9) declarar_estructuras_error -> STRUFUCT . ID LLAVEA tipo_dato PYC tipo_dato ID PYC LLAVEC
    (10) declarar_estructuras_error -> STRUFUCT . ID LLAVEA tipo_dato ID PYC tipo_dato PYC LLAVEC
    (11) declarar_estructuras_error -> STRUFUCT . ID LLAVEA tipo_dato PYC tipo_dato PYC LLAVEC
    (12) declarar_estructuras_error -> STRUFUCT . ID LLAVEA ID PYC ID PYC LLAVEC
    (13) declarar_estructuras_error -> STRUFUCT . ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC tipo_dato ID PYC LLAVEC

    ID              shift and go to state 15


state 6

    (7) declarar_estructuras_error -> ID . LLAVEA tipo_dato ID PYC tipo_dato ID PYC LLAVEC
    (8) declarar_estructuras_error -> ID . ID LLAVEA tipo_dato ID PYC tipo_dato ID PYC LLAVEC

    LLAVEA          shift and go to state 17
    ID              shift and go to state 16


state 7

    (6) declarar_estructuras -> declarar_estructuras_error .

    IFINT           reduce using rule 6 (declarar_estructuras -> declarar_estructuras_error .)
    FUNCTION        reduce using rule 6 (declarar_estructuras -> declarar_estructuras_error .)
    MAFAIFIN        reduce using rule 6 (declarar_estructuras -> declarar_estructuras_error .)


state 8

    (14) declarar_funciones -> FUNCTION . tipo_dato ID PA tipo_dato ID PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
    (15) declarar_funciones -> FUNCTION . tipo_dato ID PA PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
    (16) declarar_funciones -> FUNCTION . tipo_dato ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (17) declarar_funciones -> FUNCTION . tipo_dato ID PA tipo_dato ID COMA tipo_dato ID PC LLAVEA bloque_codigo REFETUFURN ID PYC LLAVEC
    (25) tipo_dato -> . IFINT
    (26) tipo_dato -> . STRIFING
    (27) tipo_dato -> . AFARRAFAY
    (28) tipo_dato -> . STRUFUCT
    (29) tipo_dato -> . VOFOIFID
    (30) tipo_dato -> . CHAFAR
    (31) tipo_dato -> . BOFOOFOL
    (32) tipo_dato -> . FLOFOAFAT

    IFINT           shift and go to state 19
    STRIFING        shift and go to state 20
    AFARRAFAY       shift and go to state 21
    STRUFUCT        shift and go to state 22
    VOFOIFID        shift and go to state 23
    CHAFAR          shift and go to state 24
    BOFOOFOL        shift and go to state 25
    FLOFOAFAT       shift and go to state 26

    tipo_dato                      shift and go to state 18

state 9

    (18) declarar_main -> IFINT . MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (21) declarar_main_error -> IFINT . MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
    (23) declarar_main_error -> IFINT . PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (24) declarar_main_error -> IFINT . ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC

    MAFAIFIN        shift and go to state 27
    PA              shift and go to state 28
    ID              shift and go to state 29


state 10

    (20) declarar_main_error -> MAFAIFIN . PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (22) declarar_main_error -> MAFAIFIN . PA PC LLAVEA bloque_codigo LLAVEC

    PA              shift and go to state 30


state 11

    (19) declarar_main -> declarar_main_error .

    $end            reduce using rule 19 (declarar_main -> declarar_main_error .)


state 12

    (1) start -> declarar_estructuras declarar_main .

    $end            reduce using rule 1 (start -> declarar_estructuras declarar_main .)


state 13

    (3) start -> declarar_estructuras declarar_funciones . declarar_main
    (18) declarar_main -> . IFINT MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (19) declarar_main -> . declarar_main_error
    (20) declarar_main_error -> . MAFAIFIN PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (21) declarar_main_error -> . IFINT MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
    (22) declarar_main_error -> . MAFAIFIN PA PC LLAVEA bloque_codigo LLAVEC
    (23) declarar_main_error -> . IFINT PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC
    (24) declarar_main_error -> . IFINT ID PA PC LLAVEA bloque_codigo REFETUFURN PYC LLAVEC

    IFINT           shift and go to state 9
    MAFAIFIN        shift and go to state 10

    declarar_main                  shift and go to state 31
    declarar_main_error            shift and go to state 11

state 14

    (2) start -> declarar_funciones declarar_main .
